--- a/force-app/main/default/classes/AP01_OrderProductCheckerTest.cls
+++ b/force-app/main/default/classes/AP01_OrderProductCheckerTest.cls
@@ -6,16 +6,15 @@ private class AP01_OrderProductCheckerTest {
     /**
      * Create test data by inserting one account and one order.
      */
-    static List<Order> createTestData() {
-        return TestDataFactory.insertData(NUM_OF_ACCOUNTS, NUM_OF_ORDERS);
-    } 
+    @testSetup
+    static void setupTestData() {
+        TestDataFactory.insertData(NUM_OF_ACCOUNTS, NUM_OF_ORDERS);
+    }
     
         // Test method to check orders without products
         @isTest
         static void testCheckProducts_NoProducts() {
-            // Create test data by inserting one account and one order
-            List<Order> listOrders = createTestData();
-
+            
             // Change the status of the orders to 'Activated' and delete the order items
             List<Order> orders = [SELECT Id, Status, (SELECT Id FROM OrderItems) FROM Order];
             List<OrderItem> orderItemsToDelete = new List<OrderItem>();
@@ -23,13 +22,9 @@ private class AP01_OrderProductCheckerTest {
                     
             for(Order order : orders){
                 for(OrderItem orderItem : order.OrderItems){
-                    orderItemsToDelete.add(orderItem);
+                    delete orderItem ;
                 }
-                odrToUpd.add(new Order(Id = order.Id, Status = 'Activated'));
-            }
-                    
-            if(!orderItemsToDelete.isEmpty()){
-                delete orderItemsToDelete;
+                order.Status = 'Activated';
             }
     
             //System.debug('odrToUpd : ' + odrToUpd);
@@ -55,21 +50,17 @@ private class AP01_OrderProductCheckerTest {
         // Test method to check orders with products
         @isTest
         static void testCheckProducts_WithProducts() {
-            // Create test data by inserting one account and one order
-            List<Order> listOrders = createTestData();
-            
             // Change the status of the orders to 'Activated' without deleting any order items
             List<Order> orders = [SELECT Id, Status, (SELECT Id FROM OrderItems) FROM Order];
-            List<Order> odrToUpd = new List<Order>();
                     
             for(Order order : orders){
-                odrToUpd.add(new Order(Id = order.Id, Status = 'Activated'));
+                order.Status = 'Activated';
             }
                     
             // Update the orders and expect no exception since there are products
             Test.startTest();
             try {
-              update odrToUpd;
+              update orders;
             } catch (Exception e) {
                 // Check if the exception message contains the expected error message
                 Boolean ExceptionError =  e.getMessage().contains('L\'order doit avoir au moins un produit avant d\'être activé.') ? true : false; 
@@ -79,7 +70,7 @@ private class AP01_OrderProductCheckerTest {
             Test.stopTest();
     
             // Verify that the status of the orders with products is 'Activated'
-            for(Order order : odrToUpd){
+            for(Order order : orders){
                 Order updatedOrder = [SELECT Id, Status FROM Order WHERE Id = :order.Id];
                 System.assertEquals('Activated', updatedOrder.Status);
             }
@@ -87,7 +78,8 @@ private class AP01_OrderProductCheckerTest {
         @isTest
         static void testActiveFlagOnAccountWhenOrderDeleted() {
             // Create test data by inserting one account and one order
-            List<Order> listOrders = createTestData();
+            List<Order> listOrders = TestDataFactory.insertData(NUM_OF_ACCOUNTS, NUM_OF_ORDERS);
+
             
             // Check that the account is active before the order is deleted
             Account updatedAccount = [SELECT Active__c FROM Account WHERE Id = :listOrders[0].AccountId  ];
@@ -106,9 +98,11 @@ private class AP01_OrderProductCheckerTest {
         @isTest
         static void testActiveFlagOnAccountWithOrder() {
             // Create test data with an order that will be deleted
-            List<Order> listOrdersdelete = createTestData();
+            List<Order> listOrdersdelete =TestDataFactory.insertData(NUM_OF_ACCOUNTS, NUM_OF_ORDERS);
+
             // Create test data with an order that will not be deleted            
-            List<Order> listOrdersNoDelete = createTestData();
+            List<Order> listOrdersNoDelete =TestDataFactory.insertData(NUM_OF_ACCOUNTS, NUM_OF_ORDERS);
+
         
             // Check that the account is active when it has an order
             Account updatedAccountWithOrder = [SELECT Active__c FROM Account WHERE Id = :listOrdersNoDelete[0].AccountId  ];
@@ -128,7 +122,7 @@ private class AP01_OrderProductCheckerTest {
             System.assertEquals(false, updatedAccountWithoutOrder.Active__c);
         
             // Verify that the account is still active after the other order is deleted
-            updatedAccountWithOrder = [SELECT Active__c FROM Account WHERE Id = :listOrdersNoDelete[0].AccountId  ];
+            updatedAccountWithOrder = [SELECT Active__c FROM Account WHERE Id  = :listOrdersNoDelete[0].AccountId  ];
             System.assertEquals(true, updatedAccountWithOrder.Active__c);
         }
         
