--- a/force-app/main/default/classes/APB01_ReminderAccountBatchTest.cls
+++ b/force-app/main/default/classes/APB01_ReminderAccountBatchTest.cls
@@ -4,7 +4,8 @@ private class  APB01_ReminderAccountBatchTest {
         // Create test accounts without orders and reminder tasks
         List<Account> accounts = new List<Account>();
         for (Integer i = 0; i < 200; i++) {
-            Account acc = new Account(Name = 'Test Account ' + i, Industry = 'Technology', Phone = '123-456-7890', Website = 'www.example.com');
+         //   Account acc = new Account(Name = 'Test Account ' + i, Industry = 'Technology', Phone = '123-456-7890', Website = 'www.example.com');
+            TestDataFactory.createTestAccounts(200);
             accounts.add(acc);
         }
         insert accounts;
